# uva_acm

./: .gitignore  ACMe_hdu_1219.cpp  ACMe_hdu_1219.out  ACMe_hdu_1219_ans.out  AContestingDecision_hdu_1304.cpp  AContestingDecision_hdu_1304.in  APlusB_SGU_100.cpp  APlusB_hdu_1228.cpp  ASimpleTask_hdu_1339.cpp  Alphacode_hdu_1508.cpp  Babelfish_uva_10282.cpp  BalloonComes_hdu_1170.cpp  BalloonComes_hdu_1170.in~  BalloonComes_hdu_1170.out  BeatTheSpread_hdu_1194.cpp  BigData.h  BigData_test.cpp  BlurredVision_hdu_1218.cpp  BlurredVision_hdu_1218.in  BlurredVision_hdu_1218.out  BoxOfBricks_hdu_1326.cpp  Brine_hdu_1408.cpp  Brine_hdu_1408.in  Brine_hdu_1408.out  CMakeLists.txt  CallingExtraterrestrialIntelligenceAgain_hdu_1239.cpp  CoconutsRevisited_hdu_1346.cpp  ColourHash_uva_704.cpp  ColourHash_uva_704_old.cpp  ColourHash_uva_704_old_linkList.cpp  CompoundWords_uva_10391.cpp  ConcatenationOfLanguages_uva_10887.cpp  ConcatenationOfLanguages_uva_10887.in  ConcatenationOfLanguages_uva_10887.out  CountStudentNum_hdu_1235.cpp  DNASorting_hdu_1379.cpp  DefiniteValues_hdu_1327.cpp  DefiniteValues_hdu_1327.in  DefiniteValues_hdu_1327.out  DoTheUntwist_hdu_1129.cpp  (+141 more)
