cmake_minimum_required(VERSION 3.3)
project(uva_acm)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ACMe_hdu_1219.cpp
    AContestingDecision_hdu_1304.cpp
    Alphacode_hdu_1508.cpp
    APlusB_hdu_1228.cpp
    APlusB_SGU_100.cpp
    ASimpleTask_hdu_1339.cpp
    Babelfish_uva_10282.cpp
    BalloonComes_hdu_1170.cpp
    BasicallySpeaking_hdu_1335.cpp
    BeatTheSpread_hdu_1194.cpp
    BigData.h
    BigData_test.cpp
    BinaryNumbers_hdu_1390.cpp
    BlurredVision_hdu_1218.cpp
    BoxOfBricks_hdu_1326.cpp
    Brine_hdu_1408.cpp
    BrowniePointsI_hdu_1152.cpp
    CallingExtraterrestrialIntelligenceAgain_hdu_1239.cpp
    CoconutsRevisited_hdu_1346.cpp
    ColourHash_uva_704.cpp
    ColourHash_uva_704_old.cpp
    ColourHash_uva_704_old_linkList.cpp
    CompoundWords_uva_10391.cpp
    ConcatenationOfLanguages_uva_10887.cpp
    CountStudentNum_hdu_1235.cpp
    DefiniteValues_hdu_1327.cpp
    DNASorting_hdu_1379.cpp
    Domino_SGU_101.cpp
    DoTheUntwist_hdu_1129.cpp
    Doubles_hdu_1303.cpp
    EddyDigitalRoots_hdu_1163.cpp
    EddyDigitalRoots_hdu_1163_test.cpp
    ExceptionTest.cpp
    FactstoneBenchmark_hdu_1141.cpp
    Fill_uva_10630.cpp
    Fill_uva_10630_util.cpp
    FindPrimePair_hdu_1262.cpp
    FootballScore_hdu_1225.cpp
    GamePrediction_hdu_1338.cpp
    GoldbachConjecture_hdu_1397.cpp
    GrandpaIsFamous_hdu_1347.cpp
    helloworld.cpp
    HeritageFromFather_hdu_1178.cpp
    IBMMinusOne_hdu_1328.cpp
    ImmediateDecodability_hdu_1305.cpp
    Inversion_hdu_1320.cpp
    job_id_str.cpp
    Joseph_hdu_1443.cpp
    Joseph_hdu_1443_complex.cpp
    KakutaniConjecture_hdu_1279.cpp
    KnightInFEN_uva_10422_com.cpp
    KnightInFEN_uva_10422_util.cpp
    KnightsInFEN_uva_10422.cpp
    Lotto_hdu_1342.cpp
    LowestBit_hdu_1196.cpp
    Lsystem_uva_310.cpp
    LTC_hdu_1407.cpp
    MarsAPlusB_hdu_1230.cpp
    MarsAPlusB_hdu_1230_prime.cpp
    MaxSubSequence_hdu_1231.cpp
    MayaCalendar_hdu_1444.cpp
    MayaCalendar_hdu_1444_test.cpp
    MingmingRandomNum_RQN_1.cpp
    NumericallySpeaking_hdu_1314.cpp
    Octorber21st_hdu_1491.cpp
    OpenAndCloseDoor_hdu_1234.cpp
    PaintEight_hdu_1256.cpp
    PalindromeNumberSupposition_hdu_1282.cpp
    PalindromePrime_hdu_1431.cpp
    Palindromes_hdu_1318.cpp
    Parencodings_hdu_1361.cpp
    PerfectCubes_hdu_1334.cpp
    PerfectHash_uva_188.cpp
    Perfection_hdu_1323.cpp
    Prerequisites_hdu_1144.cpp
    Pseudo-RandomNumbers_hdu_1324.cpp
    ReverseNumber_hdu_1266.cpp
    ReverseText_hdu_1321.cpp
    RockPaperScissorsTournament_hdu_1148.cpp
    RoundAndRoundWeGo_hdu_1313.cpp
    Ships_UVA_322.cpp
    Ships_UVA_322_previous.cpp
    SoldierTraining_hdu_1276.cpp
    SoYouWantToBea2n-aire_hdu_1145.cpp
    SpecializedFourDigitNumbers_hdu_1197.cpp
    SpreadString_hdu_1274.cpp
    StillAPlusB_hdu_1229.cpp
    string_format_hanfei.cpp
    StringMatching_hdu_1306.cpp
    StringMatching_hdu_1306_indexNoAns.cpp
    Substrings_hdu_1238.cpp
    Sumsets_uva_10125.cpp
    Sumsets_uva_10125_hash.cpp
    template_for_acm.cpp
    test.cpp
    test_add.cpp
    test_ans.cpp
    test_clion.cpp
    TheMostDistantState_uva_10085.cpp
    TheMostDistantState_uva_10085_dynamic.cpp
    TheNewVilla_uva_321.cpp
    TheSnail_hdu_1302.cpp
    Tickets_hdu_1260.cpp
    ToAndFro_hdu_1200.cpp
    TwoSum_leetcode.cpp
    TwoXModN_hdu_1395.cpp
    WeirdClock_hdu_1393.cpp
    WhatDayIsIt_hdu_1308.cpp
    WhatDayIsIt_hdu_1308_v1.cpp
    WhoInTheMiddle_hdu_1157.cpp
    WhoInTheMiddle_hdu_1157_1.cpp
    WhoInTheMiddle_hdu_1157_2.cpp
    WordCrosses_hdu_1462.cpp MorningWalk_uva_10596.cpp)

set(SOURCE_FILES_EXE MorningWalk_uva_10596.cpp)

add_executable(uva_acm ${SOURCE_FILES_EXE})

set_target_properties(uva_acm PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")